# state-spaces

./: example.py  generate.py  pyproject.toml  train.py
src/statespaces/callbacks/: progressive_resizing.py
src/statespaces/dataloaders/: audio.py  base.py  basic.py  et.py  lm.py  lra.py  synthetic.py  ts.py
src/statespaces/dataloaders/datasets/: delay.py  reconstruct.py
src/statespaces/dataloaders/utils/: vocabulary.py
src/statespaces/models/: README.md
src/statespaces/models/baselines/: gru.py  lipschitzrnn.py  lstm.py  samplernn.py  unicornn.py  wavegan.py  wavenet.py
src/statespaces/models/baselines/nonaka/: inception.py  resnet.py  xresnet.py
src/statespaces/models/functional/: complex.py  krylov.py  unroll.py
src/statespaces/models/hippo/: transition.py  visualizations.py
src/statespaces/models/nn/: components.py
src/statespaces/models/s4/: README.md  lssl.py  s4.py  s4d.py
src/statespaces/models/sequence/: block.py  ff.py  mega.py  mha.py  model.py  pool.py  sashimi.py  unet.py
src/statespaces/models/sequence/attention/: linear.py
src/statespaces/models/sequence/convs/: conv1d.py  conv2d.py
src/statespaces/models/sequence/rnns/: qrnn.py  rnn.py  sru.py
src/statespaces/models/sequence/rnns/cells/: basic.py  hippo.py  memory.py  minimalrnn.py  timestamp.py
src/statespaces/models/sequence/ss/: dplr.py  kernel.py  lssl.py  lssl_recurrent.py  s4.py
src/statespaces/tasks/: decoders.py  encoders.py  tasks.py
src/statespaces/utils/: registry.py  train.py
